--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.16",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
